src/test/deca/context/invalid/created/assign/assign_boolean_int.deca
// Description :
//    test  assign entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.28) Les types boolean et int sont incompatibles pour l’affectation


{
boolean a = true;
int b;
b = a;
}
